@@ -12,7 +12,7 @@
 # Written by Roland Schemers <schemers@stanford.edu>
 # Extensive updates by Russ Allbery <rra@stanford.edu>
 # Converted to CGI::Application by Jon Robertson <jonrober@stanford.edu>
-# Copyright 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2011, 2012
+# Copyright 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2011, 2012, 2013
 #     The Board of Trustees of the Leland Stanford Junior University
 #
 # See LICENSE for licensing terms.
@@ -46,21 +46,18 @@ our %PAGES = (
     pwchange    => 'pwchange.tmpl',
 );
 
+# Create the persistent WebLogin object.
+my $weblogin = WebLogin->new(PARAMS => { pages => \%PAGES });
+
 # The main loop.  If we're not running under FastCGI, CGI::Fast will detect
 # that and only run us through the loop once.  Otherwise, we live in this
-# processing loop until the FastCGI socket closes.
+# processing loop until the FastCGI socket closes, we get a signal to exit,
+# or the script modification time changes.
 while (my $q = CGI::Fast->new()) {
     local $SIG{TERM} = sub { $EXITING = 1 };
-    my $weblogin = WebLogin->new(
-        PARAMS => { pages => \%PAGES },
-        QUERY  => $q,
-    );
+    $weblogin->query($q);
     $weblogin->run();
-}
-
-# Done on each pass through the FastCGI loop.  Restart the script if we've
-# been signaled or the script modification time has changed.
-continue {
+} continue {
     if ($EXITING || -M $ENV{SCRIPT_FILENAME} < 0) {
         exit;
     }
